fixes checkboxes missalignement in Treepanel in IE
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@1167 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/TreePanel/css/treepanel.css
+++ b/chsdi/public/GeoAdmin.ux/TreePanel/css/treepanel.css
@@ -195,12 +195,18 @@ div.nodeTP3selected >  a.x-tree-node-anchor span {
     color: #ff0000;
 }
 
+/* overload everything */
+.ext-ie UL.x-tree-node-ct {
+    line-height: 0;
+    font-size: 0px;
+}
+
 .ext-chrome .geoadmin-treepanel .layernodetools {
   margin-top: -1px;
 }
 
 .ext-ie .layerNodeTools {
-  margin-top: -20px;
+  margin-top: 0px;
 }
 
 .ext-safari .layerNodeTools {
